[metadata]
name = backjoon with jupyter
author = Lee ChanHaeng
author_email = 2chanhaeng@gmail.com
description = Package for solving backjoon problems with jupyter notebook
license = MIT
url = https://github.com/2chanhaeng/backjoon-with-jupyter
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
package_dir =
    = bwj

[options.packages.find]
where = bwj
